@@ -43,7 +43,7 @@ public class UserController {
                                                        BindingResult bindingResult) {
         if (bindingResult.hasErrors()) {
             return ResponseEntity.badRequest().body(
-                    new MessageResponseDTO(400,bindingResult.getAllErrors().get(0).getDefaultMessage()));
+                    new MessageResponseDTO(400,bindingResult.getAllErrors().getFirst().getDefaultMessage()));
         }
         Optional<RegistrationDTO> optionalRegistrationDTO = userService.registerUser(registrationDTO);
 
